= 9.2.9 = * Lightbox z-index fix
git-svn-id: https://plugins.svn.wordpress.org/nextend-accordion-menu/trunk@1048105 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/nextend/assets/css/window.css
+++ b/nextend/assets/css/window.css
@@ -12,6 +12,11 @@
     font-family: 'Open Sans', Arial, sans-serif;
 }
 
+.wp-admin #nextend-fontmanager-lightbox,
+.wp-admin .nextend-window{
+    z-index:10000;
+}
+
 #config_edit_form .nextend-window,
 #nextend-fontmanager-lightbox,
 #content-box .nextend-window{
